[package]
name = "youtube_to_m3u8"
version = "0.1.0"
authors = ["tktcorporation <tktcorporation.go@gmail.com>"]
edition = "2018"
description = "To get a m3u8 url of youtube videos."
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
is-it-maintained-issue-resolution = { repository = "tktcorporation/youtube_to_m3u8" }
is-it-maintained-open-issues = { repository = "tktcorporation/youtube_to_m3u8" }

[dependencies]
regex = "1"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
percent-encoding = "2.1"